@@ -6,6 +6,7 @@
   - Size of FloatingWindow now accounts for the fact that it's using Flag_NativeTitleBar and
     resizes its content accordingly (#174)
   - Fixed popups on overlayed dock widgets not working
+  - Don't restore maximized state when using RestoreOption_RelativeToMainWindow (#184)
 
 * v1.3.0 (8 February 2021)
   - Experimental QtQuick support (#49)
